<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="hello">QURAN NUMERIC MIRACLES</string>
    <string name="app_name_en">Great Miracle</string>
	<string name="app_name_ar">المعجزة الكبرى</string>
	<string name="page_name_preferences_en">Preferences</string>
	<string name="page_name_preferences_ar">الإعدادات</string>
	<string name="page_name_editnumericvalues_en">Edit numeric values</string>
	<string name="page_name_editnumericvalues_ar">تغيير القيم العددية</string>
	<string name="page_name_shownumericvalues_en">Show numeric values</string>
	<string name="page_name_shownumericvalues_ar">عرض القيم العددية</string>
	<string name="page_name_editayah_en">Edit ayah</string>
	<string name="page_name_editayah_ar">تغيير الآية</string>
	<string name="page_name_searchresult_en">Search result</string>
	<string name="page_name_searchresult_ar">نتيجة البحث</string>
	<string name="menu_settings_en">PREFERENCES</string>
    <string name="menu_settings_ar">الإعدادات</string>
    <string name="title_activity_main">QURAN MIRACLES</string>
    <string name="menu_search_en">SEARCH</string>
    <string name="menu_search_ar">بحث</string>
    <string name="menu_refresh_en">REFRESH</string>
    <string name="menu_refresh_ar">تحديث الصفحة</string>
    <string name="menu_help_en">HELP</string>
    <string name="menu_help_ar">مساعدة</string>
    <string name="menu_about_en">ABOUT US</string>
	<string name="menu_about_ar">عنا</string>
	<string name="menu_list_sourat_en">SOURAT LIST</string>
	<string name="menu_list_sourat_ar">قائمة الصور</string>
	<string name="menu_quick_go_en">GO TO PAGE</string>
	<string name="menu_quick_go_ar">إذهب الى الصفحة</string>
	<string name="menu_quran_search_en">SEARCH IN QURAN</string>
	<string name="menu_quran_search_ar">إبحث في القرآن</string>
	<string name="preference_frag_1_title_en">INTERFACE</string>
	<string name="preference_frag_1_title_ar">العرض على الشاشة</string>
	<string name="preference_frag_1_summary_en">Set interface preferences</string>
	<string name="preference_frag_1_summary_ar">إعدادات العرض على الشاشة</string>
	<string name="preference_frag_2_title_en">NUMERIC VALUES</string>
	<string name="preference_frag_2_title_ar">القيم العددية</string>
	<string name="preference_frag_2_summary_en">Set numeric values</string>
	<string name="preference_frag_2_summary_ar">عرض القيم العددية</string>
	<string name="preference_frag_1_show_quran_19_miracle_en">Show Quran 19 Miracle</string>
	<string name="preference_frag_1_show_quran_19_miracle_ar">عرض معجزة العدد 19</string>
	<string name="preference_frag_1_show_quran_zawj_miracle_en">Show Quran Zawj Miracle</string>
	<string name="preference_frag_1_show_quran_zawj_miracle_ar">عرض معجزة تكرار الكلمة</string>
	<string name="preference_frag_1_show_quran_selection_rects_en">Show Selection Rects</string>
	<string name="preference_frag_1_show_quran_selection_rects_ar">عرض مساعدة الإختيار</string>
	<string name="preference_frag_2_show_num_val_title_en">Show numeric values</string>
	<string name="preference_frag_2_show_num_val_title_ar">عرض القيم العددية</string>
	<string name="preference_frag_2_show_num_val_summary_en">Show numeric values</string>
	<string name="preference_frag_2_show_num_val_summary_ar">عرض القيم العددية</string>
	<string name="preference_frag_2_edit_num_val_title_en">Edit numeric values</string>
	<string name="preference_frag_2_edit_num_val_title_ar">تغيير القيم العددية</string>
	<string name="preference_frag_2_edit_num_val_summary_en">Edit numeric values</string>
	<string name="preference_frag_2_edit_num_val_summary_ar">تغيير القيم العددية</string>
	<string name="preference_frag_2_header_en">Numeric values</string>
	<string name="preference_frag_2_header_ar">القيم العددية</string>
	<string name="preference_frag_1_header_en">Number 19 miracle</string>
	<string name="preference_frag_1_header_ar">معجزة العدد 19</string>
	<string name="preference_frag_3_header_en">Changement</string>
	<string name="preference_frag_3_header_ar">التغييرات</string>
	<string name="preference_frag_3_title_en">CHANGES</string>
	<string name="preference_frag_3_title_ar">التغييرات</string>
	<string name="preference_frag_3_summary_en">Edit Miracles</string>
	<string name="preference_frag_3_summary_ar">التغيير في المعجزة</string>
	<string name="preference_frag_3_edit_quran_miracle_en">Edit Quran Miracle</string>
	<string name="preference_frag_3_edit_quran_miracle_ar">تغيير المعجزة </string>
	<string name="quran">Quran</string>
	<string name="quick_go_button_txt_ar">إذهب الى الصفحة</string>
	<string name="quick_go_button_txt_en">Go to page</string>
	<string name="quick_go_button_ayah_txt_ar">إذهب الى الآية</string>
	<string name="quick_go_button_ayah_txt_en">Go to verse</string>
	<string name="quran_search_button_ayat_txt_ar">إبحث في الآيات</string>
	<string name="quran_search_button_ayat_txt_en">Search in verses</string>
	<string name="quran_search_button_kalimat_txt_ar">إبحث في الكلمات</string>
	<string name="quran_search_button_kalimat_txt_en">Search in words</string>
	<string name="quran_search_complete_check_label_text_ar">بحث كامل</string>
	<string name="quran_search_complete_check_label_txt_en">Search complete word</string>
	<string name="quran_search_alif_check_label_text_ar">إعتبار الألف</string>
	<string name="quran_search_alif_check_label_text_en">Consider Alif</string>
	<string name="quran_search_select_ayah_kalima_label_text_ar">إختيار الآيات أو الكلمات</string>
	<string name="quran_search_select_ayah_kalima_label_text_en">Select verses/words</string>
</resources>
