<menu xmlns:android="http://schemas.android.com/apk/res/android">
    
    <item
        android:id="@+id/menu_quran"
        android:icon="@drawable/quran32"
        android:showAsAction="always"
        android:title="@string/quran"/>
	<item
        android:id="@+id/menu_list_sourat"
        android:icon="@drawable/quran_list_sourat"
        android:showAsAction="never"
        android:title="@string/menu_list_sourat_ar"/>
	<item
        android:id="@+id/menu_quran_search"
        android:icon="@drawable/quran_search"
        android:showAsAction="never"
        android:title="@string/menu_quran_search_ar"/>
    <item
        android:id="@+id/menu_quick_go"
        android:icon="@drawable/quran_quick_go"
        android:showAsAction="never"
        android:title="@string/menu_quick_go_ar"/>
    <item
        android:id="@+id/menu_help"
        android:icon="@drawable/quran_help"
        android:showAsAction="never"
        android:title="@string/menu_help_ar"/>
    <item
        android:id="@+id/menu_about"
        android:icon="@drawable/quran_about"
        android:showAsAction="never"
        android:title="@string/menu_about_ar"/>
    <item
        android:id="@+id/menu_settings"
        android:icon="@drawable/quran_setting"
        android:showAsAction="never"
        android:title="@string/menu_settings_ar"/>
    
</menu>
