<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical"
	android:background="#FFFFFF">

	<LinearLayout
		android:layout_width="fill_parent"
		android:layout_height="fill_parent"
		android:orientation="horizontal">	
		<View
			android:layout_width="1dp"
			android:layout_height="fill_parent"
			android:background="#999999"/>
		<LinearLayout
			android:layout_width="fill_parent"
			android:layout_height="fill_parent"
			android:orientation="vertical">			
			<EditText
				android:layout_width="fill_parent"
				android:layout_height="wrap_content"
				android:id="@+id/quran_search_text"
				android:gravity="right"/>
			<LinearLayout
				android:layout_width="fill_parent"
				android:layout_height="wrap_content"
				android:orientation="horizontal"
				android:layout_gravity="right">	
				<TextView
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:text="@string/quran_search_complete_check_label_text_ar"
					android:layout_weight="1"
					android:textSize="20px"/>
				<CheckBox
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:id="@+id/quran_search_complete_check"
					android:layout_weight="0"
					android:textSize="20px"/>
			</LinearLayout>
			<LinearLayout
				android:layout_width="fill_parent"
				android:layout_height="wrap_content"
				android:orientation="horizontal"
				android:layout_gravity="right">	
				<TextView
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:text="@string/quran_search_alif_check_label_text_ar"
					android:layout_weight="1"
					android:textSize="20px"/>
				<CheckBox
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:id="@+id/quran_search_alif_check"
					android:layout_weight="0"
					android:textSize="20px"/>
			</LinearLayout>
			<LinearLayout
				android:layout_width="fill_parent"
				android:layout_height="wrap_content"
				android:orientation="horizontal"
				android:layout_gravity="right">	
				<TextView
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:text="@string/quran_search_select_ayah_kalima_label_text_ar"
					android:layout_weight="1"
					android:textSize="20px"/>
				<CheckBox
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:id="@+id/quran_search_select_ayah_kalima"
					android:layout_weight="0"
					android:textSize="20px"/>
			</LinearLayout>
			<LinearLayout
				android:layout_width="fill_parent"
				android:layout_height="wrap_content"
				android:orientation="horizontal"
				android:layout_gravity="right">	
				<Button
					android:layout_width="wrap_content"
					android:layout_height="fill_parent"
					android:layout_weight="0"
					android:id="@+id/quran_search_button_ayat"
					android:text="@string/quran_search_button_ayat_txt_ar"
					android:textSize="20px"/>

				<Button
					android:layout_width="wrap_content"
					android:layout_height="fill_parent"
					android:layout_weight="1"
					android:id="@+id/quran_search_button_kalimat"
					android:text="@string/quran_search_button_kalimat_txt_ar"
					android:textSize="20px"/>
			</LinearLayout>
		</LinearLayout>
	</LinearLayout>
</LinearLayout>
